fixed word spacing on main nav

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body, section {
   font-family: Helvetica, sans-serif;
   font-size: 1.1em;
   letter-spacing: 0.4em;
+  word-spacing: 0.2em;
   text-decoration: none;
 
   padding: 10px 0 10px .4em;
